plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.1'
	id 'io.spring.dependency-management' version '1.1.5'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'

	//webClient
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-webflux'


	// for jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'

	//jpa-db
	implementation 'org.postgresql:postgresql:42.7.3'
	implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.3'
	// mongoDB
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

	//test-db
	testRuntimeOnly 'com.h2database:h2'
	//Redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
  
	//Jackson에 jackson-datatype-jsr310 모듈 추가(LocalDateTime)
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.3'


}

tasks.named('test') {
	useJUnitPlatform()
}
